--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
+    "body-parser": "~1.17.2",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
+    "debug": "~2.6.8",
+    "express": "~4.15.3",
     "feedparser": "^2.2.0",
-    "morgan": "~1.8.1",
-    "node-sass-middleware": "0.9.8",
+    "morgan": "~1.8.2",
+    "node-sass-middleware": "0.11.0",
     "nodemon": "^1.11.0",
     "pouchdb": "^6.2.0",
     "pouchdb-upsert": "^2.2.0",
-    "pug": "~2.0.0-beta11",
+    "pug": "~2.0.0-rc.2",
     "request": "^2.81.0",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.3"
   }
 }
