--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pouchdb-upsert": "^2.2.0",
     "pug": "~2.0.0-rc.2",
     "request": "^2.81.0",
-    "serve-favicon": "~2.4.3"
+    "serve-favicon": "~2.4.3",
+    "underscore": "^1.8.3"
   }
 }
