--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@ typings/
 # End of https://www.gitignore.io/api/express,node,idea
 RSS_Feeds/
 RSS_Content/
+".idea/workspace.xml"  
+
+\.idea/workspace\.xml
