--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.8",
     "express": "~4.15.3",
     "feedparser": "^2.2.0",
+    "moment": "^2.18.1",
     "morgan": "~1.8.2",
     "node-sass-middleware": "0.11.0",
     "nodemon": "^1.11.0",
