--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pugrss",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": ">8"
+  },
   "scripts": {
     "start": "nodemon ./bin/www"
   },
