--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "body-parser": "~1.17.2",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.8",
     "express": "~4.15.3",
+    "express-session": "^1.15.3",
     "feedparser": "^2.2.0",
     "he": "^1.1.1",
     "moment": "^2.18.1",
     "morgan": "~1.8.2",
     "node-sass-middleware": "0.11.0",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-auth0": "^0.6.0",
     "pouchdb": "^6.2.0",
     "pouchdb-upsert": "^2.2.0",
     "pug": "~2.0.0-rc.2",
