--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "~1.17.2",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.3",
