--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "~1.17.2",
     "connect-ensure-login": "^0.1.1",
+    "connect-redis": "^3.3.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.8",
     "express": "~4.15.3",
